<resources>
    <string name="app_name">Learning APP</string>
    <string name="isTeacher">我是教师</string>
    <string name="isStudent">我是学生</string>
    <string name="Input_User_Hinit">输入用户名</string>
    <string name="Input_User_Hint">输入用户名</string>
    <string name="signup_account_hint">输入您的账号</string>
    <string name="signup_name_hint">输入您的姓名</string>
    <string name="signup_hint_password">输入您的密码</string>
    <string name="signup_hint_password_2">请再次确认密码</string>
    <string name="signup_code_initial_hint">请先选择身份</string>
    <string name="title_activity_create_class_room">CreateClassRoom_Activity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>