<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.Sign_Up_Activity">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:gravity="center"
            android:text="新用户注册"
            android:textColor="@color/black"
            android:textSize="30sp" />
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="673dp"
        android:background="@drawable/background2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.948">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="30dp"
            android:orientation="vertical">

            <com.example.learningapp.CustomViews.HideHintEditText
                android:id="@+id/signup_account"
                android:layout_width="match_parent"
                android:layout_height="75dp"
                android:ems="10"
                android:hint="@string/signup_account_hint"
                android:inputType="text"
                android:text="" />

            <com.example.learningapp.CustomViews.HideHintEditText
                android:id="@+id/signup_name"
                android:layout_width="match_parent"
                android:layout_height="75dp"
                android:ems="10"
                android:hint="@string/signup_name_hint"
                android:inputType="textPersonName"
                android:text="" />

            <com.example.learningapp.CustomViews.HideHintEditText
                android:id="@+id/signup_password"
                android:layout_width="match_parent"
                android:layout_height="75dp"
                android:ems="10"
                android:hint="@string/signup_hint_password"
                android:inputType="textPassword" />

            <com.example.learningapp.CustomViews.HideHintEditText
                android:id="@+id/signup_password2"
                android:layout_width="match_parent"
                android:layout_height="75dp"
                android:ems="10"
                android:hint="@string/signup_hint_password_2"
                android:inputType="textPassword" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="选择您的身份"
                android:textSize="20sp" />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/signup_T"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="教师"
                    android:textSize="20sp" />

                <RadioButton
                    android:id="@+id/signup_s"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="学生"
                    android:textSize="20sp" />
            </RadioGroup>

            <com.example.learningapp.CustomViews.MultiHintEditText
                android:id="@+id/signup_code"
                android:layout_width="match_parent"
                android:layout_height="75dp"
                android:ems="10"
                android:hint="@string/signup_code_initial_hint"
                android:inputType="number"
                android:text="" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="性别"
                android:textSize="20sp" />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/signup_g_m"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="男"
                    android:textSize="20sp" />

                <RadioButton
                    android:id="@+id/signup_g_f"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="女"
                    android:textSize="20sp" />
            </RadioGroup>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="1dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="5"
                    android:text="年龄"
                    android:textSize="20sp" />

                <com.example.learningapp.CustomViews.HideHintEditText
                    android:id="@+id/signup_age"
                    android:layout_width="113dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:inputType="number"
                    android:text="" />

                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="16" />

            </LinearLayout>

            <TextView
                android:id="@+id/signup_hint"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="--------------------------------------------------"
                android:textColor="@color/red"
                android:textSize="20sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">


                <Button
                    android:id="@+id/signup_back"
                    android:layout_width="wrap_content"
                    android:layout_height="65dp"
                    android:layout_marginHorizontal="15dp"
                    android:layout_weight="1"
                    android:backgroundTint="@color/LoginButtonColor"
                    android:text="返回"
                    android:textColor="@color/LoginButtonTextColor"
                    android:textSize="35sp" />

                <Button
                    android:id="@+id/signup_button"
                    android:layout_width="wrap_content"
                    android:layout_height="65dp"
                    android:layout_marginHorizontal="15dp"
                    android:layout_weight="1"
                    android:backgroundTint="@color/LoginButtonColor"
                    android:text="注册"
                    android:textColor="@color/LoginButtonTextColor"
                    android:textSize="35sp" />
            </LinearLayout>

        </LinearLayout>
    </FrameLayout>
</androidx.constraintlayout.widget.ConstraintLayout>